--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,15 @@
 
     <script type="module" src="/build/noi-mobility-traffic.esm.js"></script>
     <script nomodule src="/build/noi-mobility-traffic.js"></script>
+    <style>
+      :root {
+        --noi-mt-background: #488aff;
+        --noi-mt-width: 100%;
+        --noi-mt-height: 100%;
+      }
+    </style>
   </head>
   <body>
-    <noi-mobility-traffic first="Test First" last="Test Last"></noi-mobility-traffic>
+    <noi-mobility-traffic lang="it"></noi-mobility-traffic>
   </body>
 </html>
