--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,8 @@
-<!doctype html><html dir="ltr" lang="en"><head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"> <title>NOI mobility traffic web component</title> <script type="module" src="/build/noi-mobility-traffic.esm.js" data-stencil></script> <script nomodule="" src="/build/noi-mobility-traffic.js" data-stencil></script> </head> <body> <noi-mobility-traffic first="Test First" last="Test Last"></noi-mobility-traffic> <script>if ('serviceWorker' in navigator && location.protocol !== 'file:') {
+<!doctype html><html dir="ltr" lang="en"><head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"> <title>NOI mobility traffic web component</title> <script type="module" src="/build/noi-mobility-traffic.esm.js" data-stencil></script> <script nomodule="" src="/build/noi-mobility-traffic.js" data-stencil></script> <style>:root {
+        --noi-mt-background: #488aff;
+        --noi-mt-width: 100%;
+        --noi-mt-height: 100%;
+      }</style> </head> <body> <noi-mobility-traffic lang="it"></noi-mobility-traffic> <script>if ('serviceWorker' in navigator && location.protocol !== 'file:') {
   // auto-unregister service worker during dev mode
   navigator.serviceWorker.getRegistration().then(function(registration) {
   if (registration) {
