--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,14 @@
-<!doctype html><html dir="ltr" lang="en"><head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"> <title>NOI mobility traffic web component</title> <script type="module" src="/build/noi-mobility-traffic.esm.js" data-stencil></script> <script nomodule="" src="/build/noi-mobility-traffic.js" data-stencil></script> <style>:root {
+<!doctype html><html dir="ltr" lang="en"><head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"> <title>NOI mobility traffic web component</title> <script type="module" src="/build/noi-mobility-traffic.esm.js" data-stencil></script> <script nomodule="" src="/build/noi-mobility-traffic.js" data-stencil></script> <style>html, body {
+        display: block;
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      noi-mobility-traffic {
         --noi-mt-background: #488aff;
-        --noi-mt-width: 100%;
-        --noi-mt-height: 100%;
+        --noi-mt-width: 300px;
+        --noi-mt-height: 200px;
       }</style> </head> <body> <noi-mobility-traffic lang="it"></noi-mobility-traffic> <script>if ('serviceWorker' in navigator && location.protocol !== 'file:') {
   // auto-unregister service worker during dev mode
   navigator.serviceWorker.getRegistration().then(function(registration) {
