feature(bluetooth-stations): add bluetooth stations to the map

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
       }
       noi-mobility-traffic {
         --noi-mt-background: #488aff;
-        --noi-mt-width: 300px;
-        --noi-mt-height: 200px;
+        --noi-mt-width: 100%;
+        --noi-mt-height: 100vh;
       }
     </style>
   </head>
