--- a/www/index.html
+++ b/www/index.html
@@ -7,8 +7,8 @@
       }
       noi-mobility-traffic {
         --noi-mt-background: #488aff;
-        --noi-mt-width: 300px;
-        --noi-mt-height: 200px;
+        --noi-mt-width: 100%;
+        --noi-mt-height: 100vh;
       }</style> </head> <body> <noi-mobility-traffic lang="it"></noi-mobility-traffic> <script>if ('serviceWorker' in navigator && location.protocol !== 'file:') {
   // auto-unregister service worker during dev mode
   navigator.serviceWorker.getRegistration().then(function(registration) {
