feature: add media classes based on host size with resizeObservable

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
         padding: 0;
       }
       noi-mobility-traffic {
-        --noi-width: 100%;
-        --noi-height: 100vh;
+        --noi-width: 50%;
+        --noi-height: 50%;
       }
     </style>
   </head>
