--- a/www/index.html
+++ b/www/index.html
@@ -6,8 +6,8 @@
         padding: 0;
       }
       noi-mobility-traffic {
-        --noi-width: 100%;
-        --noi-height: 100vh;
+        --noi-width: 50%;
+        --noi-height: 50%;
       }</style> </head> <body> <noi-mobility-traffic lang="it"></noi-mobility-traffic> <script>if ('serviceWorker' in navigator && location.protocol !== 'file:') {
   // auto-unregister service worker during dev mode
   navigator.serviceWorker.getRegistration().then(function(registration) {
