--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
         padding: 0;
       }
       noi-mobility-traffic {
-        --noi-width: 50%;
-        --noi-height: 50%;
+        /* --noi-width: 50%;
+        --noi-height: 50%; */
       }
     </style>
   </head>
