bugfix: major bug fix, add translations, place map to the right from search on desktop, center on selected station, remove start/end station from search if searched opposite

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,6 @@
     </style>
   </head>
   <body>
-    <noi-mobility-traffic lang="it"></noi-mobility-traffic>
+    <noi-mobility-traffic lang="en"></noi-mobility-traffic>
   </body>
 </html>
