--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
       noi-mobility-traffic {
         /* --noi-width: 50%;
         --noi-height: 50%; */
-      }</style> </head> <body> <noi-mobility-traffic lang="it"></noi-mobility-traffic> <script>if ('serviceWorker' in navigator && location.protocol !== 'file:') {
+      }</style> </head> <body> <noi-mobility-traffic lang="en"></noi-mobility-traffic> <script>if ('serviceWorker' in navigator && location.protocol !== 'file:') {
   // auto-unregister service worker during dev mode
   navigator.serviceWorker.getRegistration().then(function(registration) {
   if (registration) {
