manual build deployment for test env

--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html dir="ltr" lang="en"><head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"> <title>NOI mobility traffic web component</title> <script type="module" src="/build/noi-mobility-traffic.esm.js" data-stencil></script> <script nomodule="" src="/build/noi-mobility-traffic.js" data-stencil></script> <link rel="stylesheet" href="/build/noi-mobility-traffic.css"> <style>html, body {
+<!doctype html><html dir="ltr" lang="en"><head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"> <title>NOI mobility traffic web component</title> <link rel="modulepreload" href="/build/p-e3c603ff.js"><script type="module" src="/build/p-e3c603ff.js" data-stencil data-resources-url="/build/" data-stencil-namespace="noi-mobility-traffic"></script> <script nomodule="" src="/build/noi-mobility-traffic.js" data-stencil></script> <style>:root{--noi-font-family:"Roboto", "Helvetica Neue", sans-serif;--noi-width:100%;--noi-height:100%;--noi-primary:#0068B4;--noi-primary-rgb:0, 104, 180;--noi-primary-contrast:#ffffff;--noi-action-rgb:87, 173, 57;--noi-action:#339966;--noi-action-contrast:#ffffff}*{box-sizing:border-box;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);-webkit-tap-highlight-color:transparent;-webkit-touch-callout:none}html{width:100%;height:100%;text-size-adjust:100%}body{-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;margin:0;padding:0;position:fixed;width:100%;max-width:100%;height:100%;max-height:100%;text-rendering:optimizeLegibility;overflow:hidden;touch-action:manipulation;-webkit-user-drag:none;-ms-content-zooming:none;word-wrap:break-word;overscroll-behavior-y:none;text-size-adjust:none}</style> <style>html, body {
         display: block;
         height: 100%;
         width: 100%;
@@ -8,11 +8,4 @@
       noi-mobility-traffic {
         /* --noi-width: 50%;
         --noi-height: 50%; */
-      }</style> </head> <body> <noi-mobility-traffic lang="en"></noi-mobility-traffic> <script>if ('serviceWorker' in navigator && location.protocol !== 'file:') {
-  // auto-unregister service worker during dev mode
-  navigator.serviceWorker.getRegistration().then(function(registration) {
-  if (registration) {
-    registration.unregister().then(function() { location.reload(true) });
-  }
-  });
-}</script></body></html>
+      }</style> </head> <body> <noi-mobility-traffic lang="en"></noi-mobility-traffic> </body></html>
