feature(build): fix CDN issues, remove dist build, add CDN build, review the way assets are copied, abundle all in one folder

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <title>NOI mobility traffic web component</title>
-    <script type="module" src="/build/noi-mobility-traffic.esm.js"></script>
-    <!-- <script type="module" src="/build/noi-mobility-traffic.esm.js"></script> -->
-    <!-- <script nomodule src="/build/noi-mobility-traffic.js"></script> -->
+    <script type="module" src="./noi-mobility-traffic.esm.js"></script>
+    <script nomodule src="./noi-mobility-traffic.js"></script>
     <style>
       html, body {
         display: block;
